// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete modal content render 1`] = `
<div>
  <EuiCallOut
    color="warning"
    iconType="warning"
    title="Data views are deleted from every space they are shared in."
  />
  <EuiSpacer
    size="m"
  />
  <div>
    <Memo(MemoizedFormattedMessage)
      defaultMessage="You'll permanently delete {count, number} {count, plural, one {data view} other {data views}
}."
      id="indexPatternManagement.dataViewTable.deleteConfirmSummary"
      values={
        Object {
          "count": 1,
        }
      }
    />
  </div>
  <EuiSpacer
    size="m"
  />
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "name",
          "name": "Data view",
          "sortable": true,
        },
        Object {
          "align": "right",
          "field": "namespaces",
          "name": "Spaces",
          "render": [Function],
          "sortable": true,
          "width": "100px",
        },
      ]
    }
    items={
      Array [
        Object {
          "getName": [Function],
          "id": "1",
          "name": "logstash-*",
          "namespaces": Array [
            "a",
            "b",
            "c",
          ],
          "title": "logstash-*",
        },
      ]
    }
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    tableCaption="Data views selected for deletion"
    tableLayout="fixed"
  />
</div>
`;

exports[`delete modal content render 2`] = `
<div>
  <EuiCallOut
    color="warning"
    iconType="warning"
    title="Data views are deleted from every space they are shared in."
  />
  <EuiSpacer
    size="m"
  />
  <div>
    <Memo(MemoizedFormattedMessage)
      defaultMessage="You'll permanently delete {count, number} {count, plural, one {data view} other {data views}
}."
      id="indexPatternManagement.dataViewTable.deleteConfirmSummary"
      values={
        Object {
          "count": 1,
        }
      }
    />
  </div>
  <EuiSpacer
    size="m"
  />
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "name",
          "name": "Data view",
          "sortable": true,
        },
      ]
    }
    items={
      Array [
        Object {
          "getName": [Function],
          "id": "1",
          "name": "logstash-*",
          "namespaces": Array [
            "a",
            "b",
            "c",
          ],
          "title": "logstash-*",
        },
      ]
    }
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    tableCaption="Data views selected for deletion"
    tableLayout="fixed"
  />
</div>
`;

exports[`delete modal content render 3`] = `
<div>
  <EuiCallOut
    color="warning"
    iconType="warning"
    title="Data views are deleted from every space they are shared in."
  />
  <EuiSpacer
    size="m"
  />
  <div>
    <Memo(MemoizedFormattedMessage)
      defaultMessage="You'll permanently delete {count, number} {count, plural, one {data view} other {data views}
}."
      id="indexPatternManagement.dataViewTable.deleteConfirmSummary"
      values={
        Object {
          "count": 1,
        }
      }
    />
  </div>
  <EuiSpacer
    size="m"
  />
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "name",
          "name": "Data view",
          "sortable": true,
        },
        Object {
          "align": "right",
          "field": "namespaces",
          "name": "Spaces",
          "render": [Function],
          "sortable": true,
          "width": "100px",
        },
      ]
    }
    items={
      Array [
        Object {
          "getName": [Function],
          "id": "1",
          "name": "logstash-*",
          "namespaces": Array [
            "*",
          ],
          "title": "logstash-*",
        },
      ]
    }
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    tableCaption="Data views selected for deletion"
    tableLayout="fixed"
  />
</div>
`;

exports[`delete modal content render 4`] = `
<div>
  <EuiCallOut
    color="warning"
    iconType="warning"
    title="Data views are deleted from every space they are shared in."
  />
  <EuiSpacer
    size="m"
  />
  <div>
    <Memo(MemoizedFormattedMessage)
      defaultMessage="You'll permanently delete {count, number} {count, plural, one {data view} other {data views}
}."
      id="indexPatternManagement.dataViewTable.deleteConfirmSummary"
      values={
        Object {
          "count": 2,
        }
      }
    />
  </div>
  <EuiSpacer
    size="m"
  />
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "name",
          "name": "Data view",
          "sortable": true,
        },
        Object {
          "align": "right",
          "field": "namespaces",
          "name": "Spaces",
          "render": [Function],
          "sortable": true,
          "width": "100px",
        },
      ]
    }
    items={
      Array [
        Object {
          "getName": [Function],
          "id": "1",
          "name": "logstash-*",
          "namespaces": Array [
            "*",
          ],
          "title": "logstash-*",
        },
        Object {
          "getName": [Function],
          "id": "1",
          "name": "log*",
          "namespaces": Array [
            "a",
            "b",
            "c",
          ],
          "title": "log*",
        },
      ]
    }
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    tableCaption="Data views selected for deletion"
    tableLayout="fixed"
  />
</div>
`;
